# neurozip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  myfile.txt  requirements.txt
backend/: server.py
benchmarks/: bench_cli.py
benchmarks/datasets/: code_snippets.txt  code_snippets.txt.nzp  enwiki_sample.txt.nzp  enwiki_sample.txt.nzp.txt  logs_sample.txt  logs_sample.txt.nzp
data/: corpus.txt
include/neurozip/: neurozip.h
python/neurozip/: __init__.py  dataset.py  evaluate.py  export.py  model.py  tokenize.py  train.py
src/: CMakeLists.txt
src/api/: neurozip_c.cpp  neurozip_c.h  neurozip_cpp.cpp  neurozip_cpp.h
src/cli/: CMakeLists.txt  cli_inspect.cpp  cli_neurounzip.cpp  cli_neurozip.cpp
src/core/: file_format.cpp  file_format.h  model_interface.cpp  model_interface.h  range_coder.cpp  range_coder.h
src/models/: tiny_lstm.cpp  tiny_lstm.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_cli.py  test_roundtrip.cpp
tests/unit/: CMakeLists.txt  test_codec.cpp  test_file_format.cpp  test_model_interface.cpp
tools/: export_model.py  generate_test_corpus.py  inspect_model.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js
web/src/components/: Header.jsx  StatsPanel.jsx  TextArea.jsx
